<resources>
    <string name="app_name">Flower</string>

    <string name="jenis_bunga">Macam - Macam Bunga</string>
    <string name="tekan_gambar">(Tekan gambar untuk membuka galeri)</string>
    <string name="biodataku">Biodata</string>
    <string name="saya">PROFILE</string>
    <string name="nama">NAMA : NABILA WAHYU MULIANI</string>
    <string name="kelas">KELAS : TEKNIK INFORMATIKA B3</string>
    <string name="nim">NPM : 200602054</string>
    <string name="email">E-mail : nabilawahyumuliani13@gmail.com</string>
    <string name="alba_nama">Alba</string>
    <string name="alba_asal">Inggris</string>
    <string name="alba_deskripsi">Mawar putih York, adalah mawar hibrida dari keturunan yang tidak diketahui yang telah dibudidayakan di Eropa sejak zaman kuno</string>
    <string name="canina_nama">Canina</string>
    <string name="canina_asal">Eropa</string>
    <string name="canina_deskripsi">Rosa canina, umumnya dikenal sebagai mawar anjing</string>
    <string name="cinensis_nama">Chinensis</string>
    <string name="cinensis_asal">Tiongkok</string>
    <string name="cinensis_deskripsi">Mawar Tiongkok adalah tanaman semak, terkadang disebut mawar Benggala</string>
    <string name="foetida_nama">Foetida</string>
    <string name="foetida_asal">Georgia</string>
    <string name="foetida_deskripsi">Memiliki bunga kuning dengan aroma yang beberapa orang merasa keberatan</string>
    <string name="lincoln_nama">Mister Lincoln</string>
    <string name="lincoln_asal">California</string>
    <string name="lincoln_deskripsi">Faktor utama yang menjadi keindahan dari tanaman ini adalah karena warna bunga nya yang sangat cerah dan beraneka ragam</string>
    <string name="buff_nama">Buff Beauty</string>
    <string name="buff_asal">Inggris</string>
    <string name="buff_deskripsi">Rosa \'Buff Beauty\' adalah kultivar mawar kembang aprikot aprikot</string>
    <string name="auri_nama">Auriculatum</string>
    <string name="auri_asal">India</string>
    <string name="auri_deskripsi">Jasminum auriculatum adalah spesies melati, dalam keluarga Oleaceae</string>
    <string name="azo_nama">Azoricum</string>
    <string name="azo_asal">Portugal</string>
    <string name="azo_deskripsi">Jasminum azoricum, melati beraroma lemon, adalah spesies tanaman berbunga dalam keluarga zaitun</string>
    <string name="dico_nama">Dichotomum</string>
    <string name="dico_asal">Filiphina</string>
    <string name="dico_deskripsi">\"Bunganya cukup harum dan terbuka di malam hari, berwarna merah muda saat tunas kemudian putih \"</string>
    <string name="gran_nama">Grandiflorum</string>
    <string name="gran_asal">Italia</string>
    <string name="gran_deskripsi">Jasminum grandiflorum, juga dikenal dengan berbagai nama Melati Spanyol, Melati Kerajaan, Melati Katalan</string>
    <string name="poli_nama">Polyanthum</string>
    <string name="poli_deskripsi">Jasminum polyanthum, melati berbunga banyak atau melati merah muda, adalah spesies tanaman berbunga dari keluarga zaitun Oleaceae</string>
    <string name="winter_nama">Winter</string>
    <string name="winter_asal">Tiongkok</string>
    <string name="winter_deskripsi">Puncak mekar bunga tepat setelah musim dingin, itulah sebabnya ia juga dinamai Yingchun dalam bahasa Cina, yang berarti \"bunga yang menyambut Musim Semi</string>
    <string name="para_nama">Paradoxus</string>
    <string name="para_asal">New Mexico</string>
    <string name="para_deskripsi">Helianthus paradoxus, bunga matahari paradoks, bunga matahari teka-teki atau bunga matahari Pecos, adalah spesies bunga matahari yang terancam punah yang hanya ditemukan di rawa-rawa</string>
    <string name="bola_nama">Bolanderi</string>
    <string name="bola_deskripsi">Helianthus bolanderi adalah spesies bunga matahari yang dikenal dengan nama umum bunga matahari dan bunga matahari serpentine Bolander</string>
    <string name="debi_nama">Debilis</string>
    <string name="debi_asal">Amerika Serikat</string>
    <string name="debi_deskripsi">\"Helianthus debilis adalah spesies bunga matahari yang dikenal dengan nama umum bunga matahari timun, bunga matahari pantai, bunga matahari lemah, dan bunga matahari bukit pasir Pantai Timur \"</string>
    <string name="giga_nama">Giganteus</string>
    <string name="giga_asal">Kanada</string>
    <string name="giga_deskripsi">Helianthus giganteus, bunga matahari raksasa atau bunga matahari tinggi</string>
    <string name="nutali_nama">Nuttallii</string>
    <string name="nutali_asal">Columbia</string>
    <string name="nutali_deskripsi">Helianthus nuttallii adalah tanaman herba tahunan yang tumbuh setinggi 50–400 cm.</string>
    <string name="oci_nama">Occidentalis</string>
    <string name="oci_asal">Amerika Serikat bagian Timur</string>
    <string name="oci_deskripsi">Helianthus occidentalis, bunga matahari daun sedikit atau bunga matahari barat</string>
    <string name="mawar">Mawar</string>
    <string name="melati">Melati</string>
    <string name="matahari">Matahari</string>
    <string name="berbagai_bunga">DAFTAR BERBAGAI BUNGA</string>
    <string name="poli_asal">China dan Myanmar</string>
    <string name="bola_asal">California dan Oregon</string>
</resources>