<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/golden">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/saya"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="160dp"
        android:textStyle="bold">
    </TextView>

    <ImageView
        android:layout_width="307dp"
        android:layout_height="341dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/profile" />

    <TextView
        android:text="@string/nama"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:text="@string/kelas"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:text="@string/nim"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>
